2004-02-18  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_inflate_generic_type): Clear the new
	instance's `nginst->klass' when inflating a generic instance.
	(mono_class_is_subclass_of): Added (basic) support for generic
	instances.

Tue Feb 17 21:40:16 CET 2004 Paolo Molaro <lupus@ximian.com>

	* appdomain.h, domain.c: use a MonoCodeManager instead of a
	MonoMempool to hold compiled native code.

2004-02-17  Martin Baulig  <martin@ximian.com>

	* class.h (MonoDynamicGenericInst): Added `count_properties' and
	`properties'.

	* reflection.c (mono_reflection_generic_inst_initialize): Added
	`MonoArray *properties' argument.

	* icall.c (ves_icall_MonoGenericInst_GetProperties): New interncall.	

2004-02-17  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_Type_GetFields): Renamed to
	ves_icall_Type_GetFields_internal() and added a
	`MonoReflectionType *rtype' argument; pass it to
	mono_field_get_object() to set the field's "reflected" type.
	(ves_icall_Type_GetConstructors): Likewise.
	(ves_icall_Type_GetEvents): Likewise.
	(ves_icall_Type_GetMethodsByName): Added `MonoReflectionType *rtype'
	argument; pass it to mono_method_get_object() to set the method's
	"reflected" type.	

2004-02-17  Martin Baulig  <martin@ximian.com>

	* class.h (MonoDynamicGenericInst): New type.
	(MonoGenericInst): Added `dynamic_info' and `is_dynamic' fields.

	* icall.c (ves_icall_MonoGenericInst_GetMethods): New interncall.
	(ves_icall_MonoGenericInst_GetConstructors): New interncall.
	(ves_icall_MonoGenericInst_GetFields): New interncall.

	* class.c (mono_class_from_generic): Don't call
	mono_class_initialize_generic() if this is a dynamic instance;
	ie. it's being created from a TypeBuilder.
	Use MONO_TYPE_GENERICINST for `class->this_arg.type' and
	`class->byval_arg.type'.

	* reflection.c (mono_reflection_inflate_method_or_ctor): Renamed
	to `inflate_method' and made static.
	(mono_reflection_inflate_field): Removed.