@@ -1,5 +1,15 @@
 2004-02-18  Martin Baulig  <martin@ximian.com>
 
+	* class.c (mono_class_init): If we're a generic instance and don't
+	come from a TypeBuilder, inflate our members here.
+	(mono_class_from_generic): Removed; just use `ginst->klass' instead.
+	(mono_class_create_generic): New public method.
+	(mono_class_initialize_generic): Removed.
+	(get_instantiation_name): Renamed to
+	_mono_class_get_instantiation_name() and made it public.
+
+2004-02-18  Martin Baulig  <martin@ximian.com>
+
 	* class.c (mono_class_inflate_generic_type): Clear the new
 	instance's `nginst->klass' when inflating a generic instance.
 	(mono_class_is_subclass_of): Added (basic) support for generic
